fixed void at the top of search on mobile

--- a/teach-me-ui/src/styles/_responsive.scss
+++ b/teach-me-ui/src/styles/_responsive.scss
@@ -245,7 +245,7 @@
   //Search page style(s)
   .Search {
     padding: 0;
-    padding-top: 3.25rem;
+    // padding-top: 3.25rem;
 
     .search-box {
       border-radius: 3rem;
